--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Capacitação Git/GitHub</title>
 </head>
-<body>
+<body style="background-color: cyan">
 <h1>Sejam Bem Vind@s na Capacitação de Controle de Versionamento
 com Git/GitHub</h1>
 <br>
